--- a/src-full/views/index.ejs
+++ b/src-full/views/index.ejs
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/style.css" media="all" />
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root"><%- markup -%></div>
         <!-- TODO: seperate styleguide js -->
         <script src="styleguide/js/prism.js"></script>
 
