--- a/src-full/views/index.ejs
+++ b/src-full/views/index.ejs
@@ -6,19 +6,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Patternlab React Full Demo</title>
         <!-- TODO: seperate styleguide css -->
-        <link rel="stylesheet" href="styleguide/css/styleguide.css" media="all" />
-        <link rel="stylesheet" href="styleguide/css/pattern-scaffolding.css" media="all" />
-        <link rel="stylesheet" href="styleguide/css/prism-funky.css" media="all" />
+        <link rel="stylesheet" href="/styleguide/css/styleguide.css" media="all" />
+        <link rel="stylesheet" href="/styleguide/css/pattern-scaffolding.css" media="all" />
+        <link rel="stylesheet" href="/styleguide/css/prism-funky.css" media="all" />
 
-        <link rel="stylesheet" href="styleguide/css/site.css" media="all" /><!-- nb. extra css for styleguide homepage and links, need to improve -->
+        <link rel="stylesheet" href="/styleguide/css/site.css" media="all" /><!-- nb. extra css for styleguide homepage and links, need to improve -->
 
-        <link rel="stylesheet" href="css/style.css" media="all" />
+        <link rel="stylesheet" href="/css/style.css" media="all" />
     </head>
     <body>
         <div id="root"><%- markup -%></div>
         <!-- TODO: seperate styleguide js -->
-        <script src="styleguide/js/prism.js"></script>
+        <script src="/styleguide/js/prism.js"></script>
 
-        <script src="app.js"></script>
+        <script src="/app.js"></script>
     </body>
 </html>
